fix overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -170,15 +170,11 @@ a {
 
 @keyframes grow {
   0% {
-    transform: scale(0);
-    top: -100%;
     right: -100%;
     opacity: 0;
   }
   100% {
-    transform: scale(1);
     opacity: 1;
-    top: 0;
     right: 0;
   }
 }
@@ -196,7 +192,6 @@ a {
 @media (max-width: 75em) {
   .nav {
     animation: grow 1s;
-    transition: all 1s ease;
     background-color: #E76F51;
     width: 100%;
     position: fixed;
@@ -220,6 +215,9 @@ a {
   .nav {
     flex-direction: column;
   }
+}
+.nav.mobile-hidden {
+  transition: all 0.3s ease;
 }
 @media (max-width: 75em) {
   .nav.mobile-hidden {
@@ -252,31 +250,41 @@ a {
 }
 .nav__mobile {
   display: none;
-  position: relative;
+  position: fixed;
+  left: 0;
+  right: 0;
   transition: all 0.3s ease;
+  z-index: 1000;
+  padding-top: 1rem;
+  padding-bottom: 1rem;
+  left: 50%;
+  transform: translateX(-50%);
+  width: 75%;
+  justify-content: space-between;
 }
 @media (max-width: 75em) {
   .nav__mobile {
-    z-index: 1000;
-    position: fixed;
-    padding-top: 1rem;
-    padding-bottom: 1rem;
     display: flex;
-    left: 50%;
-    transform: translateX(-50%);
-    width: 75%;
-    justify-content: space-between;
-    transition: all 0.3s ease;
   }
 }
 .nav__mobile.active::after {
+  transition: all 0.3s ease;
   content: "";
   position: absolute;
   top: 0;
   left: -100%;
   right: -100%;
   bottom: 0;
+  animation: appear 0.2s ease;
   background-color: #E76F51;
+}
+@keyframes appear {
+  0% {
+    opacity: 0;
+  }
+  100% {
+    opacity: 1;
+  }
 }
 .nav__icon {
   font-size: 3rem;
@@ -397,9 +405,10 @@ a {
   position: fixed;
   bottom: 10rem;
   right: 10rem;
-  transition: all 0.3s;
+  transition: all 0.3s ease;
   box-shadow: 3px 5px 30px rgba(0, 0, 0, 0.2);
   z-index: 1000;
+  opacity: 1;
 }
 .nav__icon-to-top.hidden {
   opacity: 0;
